--- a/mappings/mappings.json
+++ b/mappings/mappings.json
@@ -12,7 +12,7 @@
         {
             "input": 94,
             "layer": 0,
-            "set_layer": "alt 0 1"
+            "short": "ctrl+shift+v"
         },
         {
             "input": 94,
@@ -37,7 +37,7 @@
         {
             "input": 93,
             "layer": 0,
-            "short": "enter"
+            "short": "alt+tab"
         },
         {
             "input": 124,
@@ -59,5 +59,6 @@
             "layer": 0,
             "short": "home"
         }
-    ]
+    ],
+    "name": "PFU Limited  HHKB Professional JP"
 }
